--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,19 @@
-CPPFLAGS = $(shell pkg-config --cflags opencv)
-LDLIBS = $(shell pkg-config --libs opencv)
+CC=g++
+#CFLAGS+=-g
+CFLAGS+=`pkg-config --cflags opencv`
+LDFLAGS+=`pkg-config --libs opencv`
+
+PROG=DetectEyes
+OBJS=$(PROG).o
+
+.PHONY: all clean
+$(PROG): $(OBJS)
+		$(CC) -o $(PROG) $(OBJS) $(LDFLAGS)
+
+%.o: %.cpp
+		$(CC) -c $(CFLAGS) $<
+
+all: $(PROG)
+
+clean:
+		rm -f $(OBJS) $(PROG)
